# microtaint

./: .gitignore  README.md  demo.py  hatch_build.py  pyproject.toml  setup.py  sleigh-translate.py
.github/workflows/: code-quality_ci.yaml  publish.yml
microtaint/: __init__.py  simulator.py  types.py
microtaint/classifier/: categories.py
microtaint/emulator/: cli.py  heap.py  hook_core.pyi  hook_core.pyx  reporter.py  shadow.pxd  shadow.py  shadow.pyi  shadow.pyx  wrapper.py
microtaint/instrumentation/: ast.py  ast.pyi  ast.pyx  ast_test.py  cell.py  cell.pyi  cell.pyx
microtaint/instrumentation/cell_c/: README.md  cell_c.c  cell_c.pyi  cell_c_api.h  cell_core.h  circuit_bytecode.h  circuit_c.c  circuit_c.pyi
microtaint/sleigh/: engine.py  engine_test.py  lifter.py  mapper.py  polarity.py  polarity_test.py  slicer.py
tests/: bench_microtaint.py  bench_shadow_sim_wrapper_changes.py  conftest.py  conftest_use_c.py  e2e_test.py  riscv_encoder.py  simulator_test.py  smoke_test.py  test_add_carry_propagation.py  test_arm64_flags.py  test_benchmark_regressions.py  test_bit_precise_propagation.py  test_bit_precision_edge_cases.py  test_bit_propagation.py  test_category_operations.py  test_cell_benchmark.py  test_cellift_math_bugs.py  test_cellift_properties.py  test_cli_suite.py  test_cond_transportable-contd.py  test_cond_transportable.py  test_e2e_simulate.py  test_emulator.py  test_engine_fixes.py  test_exact_bit_propagation.py  test_flag_and_loop_bugs.py  test_flag_bit_precision.py  test_flag_of_cf_precision.py  test_flag_propagation.py  test_gemini_sless.py  test_heap.py  test_implicit_policy.py  test_mapper_completeness.py  test_memory_ast.py  test_memory_diagnostics.py  test_memory_operations.py  test_memory_regressions.py  test_mistral_comprehensive.py  test_no_crashes.py  test_partial_register_write_merge.py  (+15 more)
