[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-cython"]
build-backend = "hatchling.build"

[project]
name = "microtaint"
dynamic = ["version"]
description = "Bit-precise taint rules generation using Ghidra's P-Code."
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["pypcode>=3.3.3", "qiling>=1.4.6", "unicorn>=2.1.4"]

[project.scripts]
microtaint = "microtaint.emulator.cli:main"

[project.urls]
Homepage = "https://github.com/toby-bro/microtaint"
Repository = "https://github.com/toby-bro/microtaint"
Issues = "https://github.com/toby-bro/microtaint/issues"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "cython>=3.2.4",
    "hatch-cython>=0.6.0",
    "hatch-mypyc>=0.16.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "types-setuptools>=82.0.0.20260210",
]

[tool.uv.sources]
pypcode = { git = "https://github.com/angr/pypcode.git", branch = "master" }

[tool.setuptools]
packages = ["microtaint"]

# ---------------------------------------------------------------------------
# Cython compilation via hatch-cython
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
compile_py = false

[tool.hatch.build.targets.wheel.hooks.cython.options.directives]
language_level = "3"
boundscheck = false
wraparound = false

# ---------------------------------------------------------------------------
# mypyc compilation via hatch-mypyc
#
# Disabled by default so plain `uv sync` / `pip install -e .` stays fast.
#
# To install with compilation:
#   HATCH_BUILD_HOOKS_ENABLE=1 pip install -e .
#   HATCH_BUILD_HOOKS_ENABLE=1 uv sync
#
# To build a compiled wheel:
#   HATCH_BUILD_HOOKS_ENABLE=1 MYPYC_OPT_LEVEL=3 hatch build
#
# Why simulator.py and lifter.py are excluded:
#   simulator.py — hot path is inside Unicorn's C extension; benchmarks show
#                  no gain from compiling the thin Python wrapper around it.
#   lifter.py    — tiny Context-cache module; benchmarks confirmed identical
#                  performance with or without it compiled.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = false
dependencies = ["hatch-mypyc>=0.16.0", "mypy>=1.19.1"]
require-runtime-dependencies = true
exclude = [
    "/microtaint/simulator.py",
    "/microtaint/sleigh/lifter.py",
    "/microtaint/__init__.py",
    "/microtaint/sleigh/__init__.py",
    "/microtaint/instrumentation/__init__.py",
    "/microtaint/classifier/__init__.py",
    "/microtaint/instrumentation/ast_test.py",
    "/microtaint/emulator/cli.py",
    "/microtaint/emulator/wrapper.py",
    "/microtaint/emulator/shadow.py",
    "/microtaint/emulator/heap.py",
    "/microtaint/emulator/reporter.py",
]
mypy-args = ["--ignore-missing-imports", "--disable-error-code=attr-defined"]
options = { debug_level = "0" }

[tool.hatch.build.targets.sdist]
exclude = [".gitignore", ".github/"]

[tool.hatch.build.targets.wheel]
packages = ["microtaint"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
exclude = [".venv", "__pycache__", "pyproject.toml"]
line-length = 120
target-version = "py312"
format.quote-style = "single"

[tool.ruff.lint]
unfixable = ["F841"]
ignore = ["UP015", "S311", "S101", "INP001", "S501"]
task-tags = ["TODO"]
select = [
    "F",     # Pyflakes                          https://beta.ruff.rs/docs/rules/#pyflakes-f
    "E",     # pycodestyle - Error               https://beta.ruff.rs/docs/rules/#error-e
    "W",     # pycodestyle - Warning             https://beta.ruff.rs/docs/rules/#warning-w
    "C90",   # mccabe                            https://beta.ruff.rs/docs/rules/#mccabe-c90
    "I",     # isort                             https://beta.ruff.rs/docs/rules/#isort-i
    "YTT",   # flake8-2020                       https://beta.ruff.rs/docs/rules/#flake8-2020-ytt
    "S",     # flake8-bandit                     https://beta.ruff.rs/docs/rules/#flake8-bandit-s
    "B",     # flake8-bugbear                    https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "COM",   # flake8-commas                     https://beta.ruff.rs/docs/rules/#flake8-commas-com
    "C4",    # flake8-comprehensions             https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "ISC",   # flake8-implicit-str-concat        https://beta.ruff.rs/docs/rules/#flake8-implicit-str-concat-isc
    "ICN",   # flake8-import-conventions         https://beta.ruff.rs/docs/rules/#flake8-import-conventions-icn
    "INP",   # flake8-no-pep420                  https://beta.ruff.rs/docs/rules/#flake8-no-pep420-inp
    "PIE",   # flake8-pie                        https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "PYI",   # flake8-pyi                        https://beta.ruff.rs/docs/rules/#flake8-pyi-pyi
    "PT",    # flake8-pytest-style               https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
    "Q",     # flake8-quotes                     https://beta.ruff.rs/docs/rules/#flake8-quotes-q
    "RSE",   # flake8-raise                      https://beta.ruff.rs/docs/rules/#flake8-raise-rse
    "RET",   # flake8-return                     https://beta.ruff.rs/docs/rules/#flake8-return-ret
    "TID",   # flake8-tidy-imports               https://beta.ruff.rs/docs/rules/#flake8-tidy-imports-tid
    "ARG",   # flake8-unused-arguments           https://beta.ruff.rs/docs/rules/#flake8-unused-arguments-arg
    "PGH",   # pygrep-hooks                      https://beta.ruff.rs/docs/rules/#pygrep-hooks-pgh
    "PLC",   # Pylint - Convention               https://beta.ruff.rs/docs/rules/#convention-plc
    "PLE",   # Pylint - Error                    https://beta.ruff.rs/docs/rules/#error-ple
    "PLW",   # Pylint - Warning                  https://beta.ruff.rs/docs/rules/#warning-plw
    "NPY",   # NumPy-specific rules              https://beta.ruff.rs/docs/rules/#numpy-specific-rules-npy
    "RUF",   # Ruff-specific rules               https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
    "TD004", # flake8-missing-todo-colon
    "TD005", # flake8-missing-todo-description
    "TD007", # flake8-missing-space-after-todo-colon
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"*/test/*" = ["INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pylint]
max-args = 4
max-branches = 5
max-statements = 5

[tool.ruff.lint.pycodestyle]
max-doc-length = 160
ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
mypy_path = ["stubs"]
no_implicit_optional = false
strict_equality = true
strict = true
show_error_codes = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
namespace_packages = true
pretty = true
exclude = [".venv/", ".git/", "__pycache__/", "output/", "peekaboo/", "tools/"]

# pypcode and unicorn are C extensions with no bundled stubs
[[tool.mypy.overrides]]
module = ["pypcode", "pypcode.*", "unicorn", "unicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:multiprocessing.popen_fork"]
addopts = "--cov=microtaint --cov-report=xml --cov-report=term-missing"
testpaths = ["microtaint", "tests"]

[tool.coverage.run]
omit = [
    "*_test.py",
    "tests/*",
    "setup.py",
    "*/__init__.py",
    "*/__main__.py",
    "*/stubs/*",
    "demo.py",
]
